_sass/SHB_css.scss
img { 
    border-radius:5%;
}

.navbar {
  margin-bottom: 20px;
}

.btn {
    margin-top: 1%;
    margin-bottom: 1%;
}

.container-fluid {
  max-width: 800px;
}

.container-footer {
  margin-right: auto;
  margin-left: auto;
  max-width: 800px;
}

.well-collapse {
  padding-left:  20px;
  padding-right: 20px;
  padding-top:   12px;
  padding-bottom: 4px;
  border-radius:  7px;
  min-height:     1px;
  margin-top:    15px;
  color: black;
  background-color: var(--gray);
  border: 2px solid var(--gray-dark);
  blockquote {
    border-color: #ddd;
    border-color: rgba(0,0,0,.15);
  }
}

